реализовал метод загрузки файлов на сервер
